--- a/src/Article.css
+++ b/src/Article.css
@@ -6,11 +6,11 @@
 }
 
 .App-article:nth-child(even) {
-    border-left: 0;
+    margin-left: -1px;
 }
 
 .App-article:nth-child(n+3) {
-    border-top: 0;
+    margin-top: -1px;
 }
 
 a {
@@ -29,4 +29,29 @@ a {
 .article__pic {
         max-width: 300px;
         width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+    .App-article {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .article__text {
+        width: 100%;
+    }
+    
+    .article__pic-wrapper {
+        width: 100%;
+    }
+
+    .App-article:nth-child(even) {
+        margin-left: 0;
+    }
+    
+    .App-article:nth-child(n+3) {
+        margin-top: 0;
+    }
+    
 }
